corction home mobile

--- a/view/html/home.html
+++ b/view/html/home.html
@@ -39,7 +39,7 @@
   </section>
 
   <div id="body">
-    <h1 id="title">ESCOLHA UM PER PARA ADOTAR</h1>
+    <h1 id="title">ESCOLHA UM PET PARA ADOTAR</h1>
 
     <div id="slide">
       <div id="carousel" class="carousel">
