--- a/view/css/styleAll.css
+++ b/view/css/styleAll.css
@@ -1,130 +1,131 @@
 body {
-    background-color: #d8d6d6;
-    background-repeat: no-repeat;
-    background-size: 100%;
-    font-family: Arial, sans-serif;
-  
-    margin: 0; /* Remova margens padrão do body */
-    padding: 0; /* Remova preenchimentos padrão do body */
+  background-color: #d8d6d6;
+  background-repeat: no-repeat;
+  background-size: 100%;
+  font-family: Arial, sans-serif;
+
+  margin: 0; /* Remova margens padrão do body */
+  padding: 0; /* Remova preenchimentos padrão do body */
 }
 
 #supermenu {
-    /*menu da barra*/
-    display: flex;
-    justify-content: space-between;
-    padding-right: 20px;
-    background-color: rgba(0, 0, 0, 0.5);
-  }
-  .barraMenu {
-    list-style: none;
-    display: flex;
-    gap: 10px;
-  }
-  .barraMenu li {
-    border-left: 1px solid rgb(12, 49, 84);
-    padding-left: 10px;
-  }
-  .barraMenu a {
-    color: white;
-    text-decoration: none;
-  }
-  .barraMenu a:hover {
-    color: rgb(175, 174, 174);
-  }
-  
-  .menu-btn {
-    display: flex;
-    flex-direction: column;
-    cursor: pointer;
-    padding: 10px;
-    position: relative; /* Set position to relative */
-    z-index: 1000;
-  }
-  
-  .btn-line {
-    width: 30px;
-    height: 3px;
-    background-color: #ffffff;
-    margin: 3px 0;
-  }
-  .btn-line:hover {
-    color: #797878;
-  }
-  
-  .side-menu {
-    position: absolute; /* Change to absolute positioning */
-  
-    left: 0;
-    width: 250px;
-    height: 100%;
-    background-color: rgb(82, 82, 82);
-    border-radius: 5px;
-    display: none; /* Hide the menu by default */
-    padding: 10px;
-  }
-  
-  .side-menu ul {
-    list-style: none;
-    padding: 0;
-  }
-  
-  .side-menu li {
-    padding: 15px;
-  }
-  
-  .side-menu a {
-    color: white;
-    text-decoration: none;
-    font-size: 18px;
-    transition: color 0.3s;
-  }
-  
-  .side-menu a:hover {
-    color: #ff9900;
-  }
-  
-  .menu-open .side-menu {
-    display: block; /* Show the menu when the body has the 'menu-open' class */
-  }
+  /*menu da barra*/
+  display: flex;
+  justify-content: space-between;
+  padding-right: 20px;
+  background-color: rgba(0, 0, 0, 0.5);
+}
+.barraMenu {
+  list-style: none;
+  display: flex;
+  gap: 10px;
+}
+.barraMenu li {
+  border-left: 1px solid rgb(12, 49, 84);
+  padding-left: 10px;
+}
+.barraMenu a {
+  color: white;
+  text-decoration: none;
+}
+.barraMenu a:hover {
+  color: rgb(175, 174, 174);
+}
 
-  #title{
-    margin-top: 50px;
-    background-color: rgba(44, 116, 106, 0.5);
-    color: #d8d6d6;
-    text-align: center ;
-    font-style: italic;
-		font-weight: bold;
-		font-size: 50px;
-		font-family: arial, sans-serif;
-    height: 130px;
-    padding-top: 50px;
-  
-  }
- 
-  body.menu-open #body  {
-  position: relative;
-  left: 100px;
-  bottom: 400px;
-  transform: scale(0.6); /* Reduz o tamanho do conteúdo */
-  transition: transform 0s; /* Adiciona uma transição suave */
-  overflow: hidden; /* Impede que o conteúdo fora da tela seja exibido */
+.menu-btn {
+  display: flex;
+  flex-direction: column;
+  cursor: pointer;
+  padding: 10px;
+  position: relative; /* Set position to relative */
+  z-index: 1000;
+}
+
+.btn-line {
+  width: 30px;
+  height: 3px;
+  background-color: #ffffff;
+  margin: 3px 0;
+}
+.btn-line:hover {
+  color: #797878;
+}
+
+.side-menu {
+  position: absolute; /* Change to absolute positioning */
+
+  left: 0;
+  width: 250px;
+  height: 100%;
+  background-color: rgb(82, 82, 82);
+  border-radius: 5px;
+  display: none; /* Hide the menu by default */
+  padding: 10px;
+}
+
+.side-menu ul {
+  list-style: none;
+  padding: 0;
+}
+
+.side-menu li {
+  padding: 15px;
+}
+
+.side-menu a {
+  color: white;
+  text-decoration: none;
+  font-size: 18px;
+  transition: color 0.3s;
+}
+
+.side-menu a:hover {
+  color: #ff9900;
+}
+
+.menu-open .side-menu {
+  display: block; /* Show the menu when the body has the 'menu-open' class */
+}
+
+#title{
+  margin-top: 50px;
+  background-color: rgba(44, 116, 106, 0.5);
+  color: #d8d6d6;
+  text-align: center ;
+  font-style: italic;
+  font-weight: bold;
+  font-size: 50px;
+  font-family: arial, sans-serif;
+  height: 130px;
+  padding-top: 50px;
+
+}
+
+body.menu-open #body  {
+position: relative;
+left: 100px;
+bottom: 400px;
+transform: scale(0.6); /* Reduz o tamanho do conteúdo */
+transition: transform 0s; /* Adiciona uma transição suave */
+overflow: hidden; /* Impede que o conteúdo fora da tela seja exibido */
 }
 
 
-  /* Slide */
-  #carrousel img{
-    width: 300px;
-    height: 250px;
+/* Slide */
+#carrousel img{
+  width: 300px;
+  height: 250px;
 
 
-  }
-  #carousel {
-    background-color:rgba(39, 253, 103, 0.637) ;
-    position: relative;
-    height: 450px;
-    top: 260px;
-    transform: translateY(-50%);
-    overflow: hidden;
+}
+#carousel {
+  background-color: rgba(39, 253, 103, 0.637);
+  position: relative;
+  height: 450px;
+  top: 260px;
+  transform: translateY(-50%);
+  overflow: hidden;
+
    
   }
   #carousel div {
@@ -132,15 +133,17 @@ body {
     transition: transform 400ms, left 400ms, opacity 400ms, z-index 0s;
     opacity: 1;
     padding: 30px;
-  }
-  #carousel div img {
-    width: 400px;
-    height: 250px;
-    transition: width 400ms;
-     -webkit-user-drag: none;
-     box-shadow: rgb(38, 57, 77) 0px 20px 30px -10px;
-     border-radius: 10px;
-  }
+}
+  
+#carousel div img {
+  width: 400px;
+  height: 250px;
+  transition: width 400ms;
+  -webkit-user-drag: none;
+  box-shadow: rgb(38, 57, 77) 0px 20px 30px -10px;
+  border-radius: 10px;
+}
+
   #carousel div.hideLeft {
     left: 0%;
     opacity: 0;
@@ -312,27 +315,26 @@ body {
     outline: none;
   }
   
-#adoptionGrade{
-  background-color:  rgba(44, 116, 106, 0.5);
-  border: 5px solid rgb(0, 0, 0) ;
-  display: flex;
-  justify-content: center;
-  font-size: 30px;
+  #adoptionGrade {
+    background-color: rgba(44, 116, 106, 0.5);
+    border: 5px solid rgb(0, 0, 0);
+    display: flex;
+    justify-content: center;
+    font-size: 30px;
 }
 
 /* Lost PEt */
 
 #containLost {
-  background-color: rgba(44, 116, 106, 0.5);;
-
+  background-color: rgba(44, 116, 106, 0.5);
   max-width: 1700px;
   margin: 44px auto 24px;
   padding: 0;
-
-
 }
-#containLost img{
- 
+
+
+
+#containLost img {
   border: 0;
   border-radius: 4px 4px 0 0;
   height: 70%;
@@ -345,26 +347,22 @@ body {
   min-height: 100px;
   text-align: center;
   vertical-align: top;
-
 }
-
 #containLost ul {
   display: flex;
   flex-wrap: wrap;
   justify-content: start;
   width: 100%;
 }
-#containLost li {
 
+#containLost li {
   margin: 10px;
   padding: 10px;
   position: relative;
   width: calc(23% - 24px)!important;
-  box-shadow: 0 1px 2px 0 rgba(0,0,0,.12);
+  box-shadow: 0 1px 2px 0 rgba(0, 0, 0, .12);
   background-color: #fff;
-  border-radius: 6px;
   border-radius: 6px;
   display: block;
 }
-
  
