--- a/view/html/add.html
+++ b/view/html/add.html
@@ -4,8 +4,33 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Adoção de Gatos</title>
+    <link rel="stylesheet" href="/view/css/styleAdd.css">
 </head>
 <body>
+    <header>
+        <a href="#home">
+            <img id="logo" src="/images/Logo.png" alt="logo" />
+        </a>
+    
+        <div id="social-icons">
+            <p>Redes sociais</p>
+            <a href="https://www.whatsapp.com"><img src="/images/whatsapp.png" alt="WhatsApp" class="social-icon"></a>
+            <a href="https://www.instagram.com"><img src="/images/instagram.png" alt="Instagram" class="social-icon"></a>
+            <a href="https://www.facebook.com"><img src="/images/facebook.png" alt="Facebook" class="social-icon"></a>
+            
+        </div>
+        
+
+    </header>
+
+    <nav id="moreBar">
+        <ul>
+            <li><a href="#home">Inicio</a></li>
+            <li><a href="#add">Adotar um Pet</a></li>
+            <li><a href="#contato">Contato</a></li>
+            <li><a href="#sobre">Sobre</a></li>
+        </ul>
+    </nav>
     <h1>Preencha o formulário abaixo:</h1>
     <form id="myForm">
         <label for="name">Nome:</label>
