--- a/view/html/contato.html
+++ b/view/html/contato.html
@@ -1,1 +1,68 @@
-<h1>teste</h1>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Contato</title>
+    <link rel="stylesheet" href="/view/css/styleContato.css">
+
+</head>
+
+<body>
+    <header>
+
+    <a href="#home">
+        <img id="logo" src="/images/Logo.png" alt="logo" />
+    </a>
+
+    <div id="social-icons">
+        <p>Redes sociais</p>
+        <a href="https://www.whatsapp.com"><img src="/images/whatsapp.png" alt="WhatsApp" class="social-icon"></a>
+        <a href="https://www.instagram.com"><img src="/images/instagram.png" alt="Instagram" class="social-icon"></a>
+        <a href="https://www.facebook.com"><img src="/images/facebook.png" alt="Facebook" class="social-icon"></a>
+        
+      </div>
+      <nav id="moreBar">
+        <ul>
+            <li><a href="#home">Inicio</a></li>
+            <li><a href="#add">Adotar um Pet</a></li>
+            <li><a href="#contato">Contato</a></li>
+            <li><a href="#sobre">Sobre</a></li>
+        </ul>
+    </nav>
+    
+</header>
+
+    <section>
+        <h2>Informações de Contato:</h2>
+        <ul>
+            <li><strong>Endereço:</strong> [Inclua aqui o endereço da sua empresa/organização]</li>
+            <li><strong>Telefone:</strong> [Inclua aqui o número de telefone da sua empresa/organização]</li>
+            <li><strong>E-mail:</strong> <a href="mailto:seuemail@exemplo.com">seuemail@exemplo.com</a></li>
+        </ul>
+    </section>
+    <section>
+        <h2>Horário de Atendimento:</h2>
+        <ul>
+            <li>Segunda-feira a sexta-feira: [Inclua o horário de atendimento]</li>
+            <li>Sábado: [Inclua o horário de atendimento]</li>
+            <li>Domingo: [Inclua o horário de atendimento]</li>
+        </ul>
+    </section>
+    <section>
+        <h2>Redes Sociais:</h2>
+        <p>Você também pode nos encontrar nas redes sociais. Siga-nos para ficar atualizado com as últimas notícias e atualizações da nossa empresa/organização.</p>
+        <ul>
+            <li><a href="[Inserir link para a página do Facebook]">Facebook</a></li>
+            <li><a href="[Inserir link para a página do Twitter]">Twitter</a></li>
+            <li><a href="[Inserir link para a página do Instagram]">Instagram</a></li>
+            <li><a href="[Inserir link para a página do LinkedIn]">LinkedIn</a></li>
+        </ul>
+    </section>
+    <section>
+        <h2>Localização:</h2>
+        <p>[Inserir mapa ou link para a localização da sua empresa/organização, se aplicável]</p>
+    </section>
+    
+</body>
+</html>
