--- a/view/html/sobre.html
+++ b/view/html/sobre.html
@@ -1,1 +1,51 @@
-<h1>Teste sobre nos</h1>
+
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <link rel="stylesheet" type="text/css" href="/view/css/styleSobre.css">
+</head>
+<body>
+    <header>
+        <a href="#home">
+            <img id="logo" src="/images/Logo.png" alt="logo" />
+        </a>
+    
+        <div id="social-icons">
+            <p>Redes sociais</p>
+            <a href="https://www.whatsapp.com"><img src="/images/whatsapp.png" alt="WhatsApp" class="social-icon"></a>
+            <a href="https://www.instagram.com"><img src="/images/instagram.png" alt="Instagram" class="social-icon"></a>
+            <a href="https://www.facebook.com"><img src="/images/facebook.png" alt="Facebook" class="social-icon"></a>
+            
+        </div>
+        
+
+    </header>
+    <div id="moreBar">
+    <nav>
+        <ul>
+            <li><a href="#home">Inicio</a></li>
+            <li><a href="#add">Adotar um Pet</a></li>
+            <li><a href="#contato">Contato</a></li>
+            <li><a href="#sobre">Sobre</a></li>
+        </ul>
+    </nav>
+        
+
+
+    <div class="container">
+        <h1>Sobre Nós - LovePet</h1>
+        <h2>Nossa História</h2>
+        <p>O LovePet é um projeto dedicado à adoção de animais de estimação. Nossa jornada começou em 2023 em um trabalho de Desenvolvimento Web. Desde então, temos trabalhado incansavelmente para encontrar lares amorosos para cães e gatos que precisam de um lar.</p>
+
+        <h2>Nossa Missão</h2>
+        <p>Nossa missão é proporcionar uma segunda chance para animais de estimação abandonados e maltratados, conectando-os com famílias amorosas que cuidarão deles para o resto de suas vidas. Acreditamos que cada animal merece amor, cuidado e um lar seguro.</p>
+
+        <h2>Contato</h2>
+        <p>Estamos sempre disponíveis para responder às suas perguntas e ajudá-lo a encontrar o animal de estimação perfeito para a sua família. .</p>
+    </div>
+
+</body>
+</html>
