--- a/view/html/ajuda.html
+++ b/view/html/ajuda.html
@@ -1,1 +1,56 @@
-<h1>ajuda</h1>
+<!DOCTYPE html>
+<html lang="pt-br">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Ajuda para Adoção de Pets - Love Pet</title> 
+    <link rel="stylesheet" type="text/css" href="/view/css/styleAjuda.css">
+</head>
+<body>
+   
+       
+        <header>
+            <a href="#home">
+                <img id="logo" src="/images/Logo.png" alt="logo" />
+            </a>
+        
+            <div id="social-icons">
+                <p>Redes sociais</p>
+                <a href="https://www.whatsapp.com"><img src="/images/whatsapp.png" alt="WhatsApp" class="social-icon"></a>
+                <a href="https://www.instagram.com"><img src="/images/instagram.png" alt="Instagram" class="social-icon"></a>
+                <a href="https://www.facebook.com"><img src="/images/facebook.png" alt="Facebook" class="social-icon"></a>
+                
+            </div>
+            
+
+    </header>
+    <div id="body">
+        <nav>
+            <ul>
+                <li><a href="#home">Inicio</a></li>
+                <li><a href="#add">Adotar um Pet</a></li>
+                <li><a href="#contato">Contato</a></li>
+                <li><a href="#sobre">Sobre</a></li>
+            </ul>
+        </nav>
+        <h1>Bem-vindo à Nossa Página de Ajuda para Adoção de Pets</h1>
+
+        <section id="porque-adoptar">
+            <h2>1. Por que Adotar?</h2>
+            <!-- Conteúdo para "Por que Adotar?" -->
+        </section>
+
+        <section id="escolher-pet">
+            <h2>2. Como Escolher o Pet Certo</h2>
+            <!-- Conteúdo para "Como Escolher o Pet Certo" -->
+        </section>
+
+        <!-- Outras seções continuariam aqui -->
+
+        <div>
+            <p>Na Love Pet, estamos apaixonados por conectar pessoas e pets. Obrigado por considerar a adoção e por fazer parte desta missão de amor pelos animais.</p>
+            <p>Adotar é uma escolha maravilhosa - juntos, podemos fazer a diferença na vida de pets necessitados.</p>
+        </div><br><br><br><br>
+    </div>
+</body>
+</html>
