--- a/view/html/home.html
+++ b/view/html/home.html
@@ -1,4 +1,4 @@
-<link rel="stylesheet" href="/view/css/styleAll.css">
+<link rel="stylesheet" href="/view/css/styleHome.css">
 
 <!DOCTYPE html>
 <html lang="en">
@@ -8,6 +8,20 @@
     <title>Home</title>
 </head>
 <body>
+  <header>
+    <a href="#home">
+        <img id="logo" src="/images/Logo.png" alt="logo" />
+    </a>
+
+    <div id="social-icons">
+        <p>Redes sociais</p>
+        <a href="https://www.whatsapp.com"><img src="/images/whatsapp.png" alt="WhatsApp" class="social-icon"></a>
+        <a href="https://www.instagram.com"><img src="/images/instagram.png" alt="Instagram" class="social-icon"></a>
+        <a href="https://www.facebook.com"><img src="/images/facebook.png" alt="Facebook" class="social-icon"></a>
+        
+      </div>
+    
+</header>
   
   <section id="supermenu">
     <div>
@@ -32,7 +46,7 @@
     <nav>
       <ul class="barraMenu">
         <li><a href="#add">Adotar um Pet</a></li>
-        <li><a href="#ajuda">Ajude</a></li>
+        <li><a href="#ajuda">Ajude-nos</a></li>
         <li><a href="#sobre">Sobre Nós</a></li>
       </ul>
     </nav>
