--- a/view/css/styleSobre.css
+++ b/view/css/styleSobre.css
@@ -108,3 +108,9 @@ header {
     text-decoration: underline;
   }
   
+  @media (max-width: 768px) {
+    #social-icons{
+        display: none;
+    }
+    
+}
