--- a/view/css/styleAjuda.css
+++ b/view/css/styleAjuda.css
@@ -60,3 +60,10 @@ body {
     border-radius: 10px;
     box-shadow: 0 0 10px rgba(0,0,0,0.1);
 }
+
+@media (max-width: 768px) {
+    #social-icons{
+        display: none;
+    }
+
+}
