--- a/view/html/home.html
+++ b/view/html/home.html
@@ -15,8 +15,10 @@
 
     <div id="social-icons">
         <p>Redes sociais</p>
+
         <a href="https://www.whatsapp.com"><img src="/images/whatsapp.png" alt="WhatsApp" class="social-icon"></a>
         <a href="https://www.instagram.com"><img src="/images/instagram.png" alt="Instagram" class="social-icon"></a>
+
         <a href="https://www.facebook.com"><img src="/images/facebook.png" alt="Facebook" class="social-icon"></a>
         
       </div>
@@ -35,7 +37,7 @@
         <ul class="menu">
           <li><a href="#sobre">Sobre Nós</a></li>
           <li><a href="#add">Adote um Pet</a></li>
-          <li><a href="#local">Onde Nos Econtrar</a></li>
+          <li><a href="https://goo.gl/maps/SXAwwrtcruovaNBz6">Onde Nos Encontrar</a></li>
           <li><a href="#contato">Entrar em Contato</a></li>
           <li><a href="#ajuda">Preciso de Ajuda</a></li>
         </ul>
