ready for delivery

--- a/view/html/contato.html
+++ b/view/html/contato.html
@@ -36,33 +36,26 @@
     <section>
         <h2>Informações de Contato:</h2>
         <ul>
-            <li><strong>Endereço:</strong> [Inclua aqui o endereço da sua empresa/organização]</li>
-            <li><strong>Telefone:</strong> [Inclua aqui o número de telefone da sua empresa/organização]</li>
-            <li><strong>E-mail:</strong> <a href="mailto:seuemail@exemplo.com">seuemail@exemplo.com</a></li>
+            <li><strong>Endereço:</strong> Rua 000,000,00,000</li>
+            <li><strong>Telefone:</strong> (00)000000000</li>
+            <li><strong>E-mail:</strong> <a href="projetoweb988@gmail.com">projetoweb988@gmail.com</a></li>
         </ul>
     </section>
     <section>
         <h2>Horário de Atendimento:</h2>
         <ul>
-            <li>Segunda-feira a sexta-feira: [Inclua o horário de atendimento]</li>
-            <li>Sábado: [Inclua o horário de atendimento]</li>
-            <li>Domingo: [Inclua o horário de atendimento]</li>
+            <li>Segunda-feira a sexta-feira: 08:30 a 18:00</li>
         </ul>
     </section>
     <section>
         <h2>Redes Sociais:</h2>
         <p>Você também pode nos encontrar nas redes sociais. Siga-nos para ficar atualizado com as últimas notícias e atualizações da nossa empresa/organização.</p>
         <ul>
-            <li><a href="[Inserir link para a página do Facebook]">Facebook</a></li>
-            <li><a href="[Inserir link para a página do Twitter]">Twitter</a></li>
-            <li><a href="[Inserir link para a página do Instagram]">Instagram</a></li>
-            <li><a href="[Inserir link para a página do LinkedIn]">LinkedIn</a></li>
+            <li><a href="www.facebook.com">Facebook</a></li>
+            <li><a href="www.instagram.com">Instagram</a></li>
         </ul>
     </section>
-    <section>
-        <h2>Localização:</h2>
-        <p>[Inserir mapa ou link para a localização da sua empresa/organização, se aplicável]</p>
-    </section>
+
     
 </body>
 </html>
